Fix margin spacing issues and other responsiveness issues

--- a/1. order-summary-component-main/css/style.css
+++ b/1. order-summary-component-main/css/style.css
@@ -65,7 +65,7 @@ p {
   justify-content: space-between;
   align-items: center;
 }
-@media (max-width: 350px) {
+@media (max-width: 500px) {
   .order-card__plan {
     flex-direction: column;
   }
@@ -73,10 +73,10 @@ p {
 .order-card__plan--icon {
   margin-right: 1.5rem;
 }
-@media (max-width: 350px) {
+@media (max-width: 500px) {
   .order-card__plan--icon {
-    margin-bottom: 1rem;
     margin-right: 0;
+    margin-bottom: -1rem;
   }
 }
 .order-card__plan--cost {
@@ -85,7 +85,7 @@ p {
   margin-right: auto;
   text-align: center;
 }
-@media (max-width: 350px) {
+@media (max-width: 500px) {
   .order-card__plan--cost {
     margin-right: 0;
   }
@@ -146,9 +146,10 @@ html {
   background-repeat: no-repeat;
   background-size: 100%;
   height: 100vh;
+  width: 100%;
   position: relative;
 }
-@media (min-width: 768px) {
+@media (min-width: 966px) {
   html {
     background-image: url(../images/pattern-background-desktop.svg);
     background-size: 100%;
@@ -160,6 +161,9 @@ html {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  margin: 1rem auto 0;
+  min-width: 300px;
+  max-width: 500px;
 }
 
 .footer {
