--- a/1. order-summary-component-main/sass/components/_card.scss
+++ b/1. order-summary-component-main/sass/components/_card.scss
@@ -34,16 +34,16 @@
     justify-content: space-between;
     align-items: center;
 
-    @media (max-width: 350px) {
+    @media (max-width: 500px) {
       flex-direction: column;
     }
 
     &--icon {
       margin-right: 1.5rem;
 
-      @media (max-width: 350px) {
-        margin-bottom: 1rem;
+      @media (max-width: 500px) {
         margin-right: 0;
+        margin-bottom: -1rem;
       }
     }
 
@@ -53,7 +53,7 @@
       margin-right: auto;
       text-align: center;
 
-      @media (max-width: 350px) {
+      @media (max-width: 500px) {
         margin-right: 0;
       }
 
