--- a/1. order-summary-component-main/sass/pages/_home.scss
+++ b/1. order-summary-component-main/sass/pages/_home.scss
@@ -4,9 +4,10 @@ html {
   background-repeat: no-repeat;
   background-size: 100%;
   height: 100vh;
+  width: 100%;
   position: relative;
 
-  @media (min-width: 768px) {
+  @media (min-width: 966px) {
     background-image: url(../images/pattern-background-desktop.svg);
     background-size: 100%;
   }
@@ -17,6 +18,9 @@ html {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  margin: 1rem auto 0;
+  min-width: 300px;
+  max-width: 500px;
 }
 
 .footer {
